--- a/public/css/themes/flatie.css
+++ b/public/css/themes/flatie.css
@@ -58,7 +58,7 @@ blockquote:before {
 .table-hover > tbody > tr:hover > th,
 ul.wysihtml5-toolbar a.btn.wysihtml5-command-active,
 .slider-track {
-    background-color: #ebf2f2;
+    background-color: #FDFDFD;
 }
 
 blockquote,
